# Telecom-Churn-Predictor

./: .gitignore  dvc.yaml  main.py  pyproject.toml
data/interim/: cleaned_data.csv
data/processed/: feature_eng_data.csv
data/processed/split/: X_test.csv  X_train.csv
models/: model.pkl
notebook/: Telecom_Churn_Predictor.ipynb
src/ai_summary/: summary_generator.py
src/data/: data_ingesion.py
src/evaluation/: model_evaluation.py
src/feature/: feature_eng.py
src/model/: model_building.py
