[project]
name = "telecom-churn-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==4.2.2",
    "dotenv>=0.9.9",
    "dvc>=3.66.1",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "nbformat>=4.2.0",
    "numpy>=2.4.2",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "reportlab>=4.4.10",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "streamlit>=1.19.0",
    "xgboost>=3.2.0",
]
